# great-tables

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONDUCT.md  CONTRIBUTING.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  back-to-top.js  build-timings.json  changelog.html  changelog.md  citation.html  citation.md  code-of-conduct.html  code-of-conduct.md  codebeaver.yml  color-swatch.js  contributing.html  contributing.md  copy-code.js  copy-page.js  dark-mode-toggle.js  details.js  github-widget.js  great-docs.yml  index.html  index.qmd  keyboard-nav.js  license.html  listings.json  llms-full.txt  llms.txt  main.py  (+24 more)
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  question.md
.github/scripts/: no_pandas.py  (+1 more)
SKILLS/: SKILL.md
articles/: case-study-gtcars.html  intro.html
blog/: index.html  index.md  index.qmd  index.xml  introduction_great_tables.html  introduction_great_tables.md
blogposts/: intro_post_0.1.0.qmd
docs/: .gitignore  Makefile  _quarto.yml  changelog.qmd  conduct.md  conf.py  contributing.md  index.md  make.bat  requirements.txt  styles.css
examples/: index.html  index.qmd
examples-qmd/: GT.html  fmt-number.html  index.html  intro-old.html  tab-spanner.html  table-manipulation.html
get-started/: basic-column-labels.html  basic-formatting.html  basic-header.html  basic-stub.html  basic-styling.html  colorizing-with-data.html  column-selection.html  contributing.html  extensions.html  index.html  loc-selection.html  nanoplots.html  overview.html  row-selection.html  table-theme-options.html  table-theme-premade.html  targeted-styles.html  technical-notes.html
great-docs/: .gitignore
great_tables/: __init__.py  _body.py  _boxhead.py  _cols_merge.py  _data_color.py  _databackend.py  _export.py  _footnotes.py  _formats.py  _formats_vals.py  _gt_data.py  _heading.py  _helpers.py  _locale.py  _locations.py  _modify_rows.py  _options.py  _pipe.py  _render.py  _render_checks.py  _row_groups.py  _scss.py  _source_notes.py  _spanners.py  _stub.py  _stubhead.py  _styles.py  _substitution.py  _tab_create_modify.py  _table.py  _tbl_data.py  _tbl_data_align.py  _text.py  _types.py  _utils.py  _utils_color.py  _utils_nanoplots.py  _utils_render_html.py  _utils_render_latex.py  _utils_render_typst.py  (+11 more)
gt/: __init__.py  _base_api.py  _body.py  _boxhead.py  _databackend.py  _footnotes.py  _formats.py  _gt_data.py  _heading.py  _helpers.py  _locale.py  _options.py  _row_groups.py  _source_notes.py  _spanners.py  _stub.py  _stubhead.py  _styles.py  _table.py  _tbl_data.py  _text.py  _text_utils.py  _utils.py  gt.py  utils_render_common.py
gt/data/: sza.csv  (+9 more)
reference/: GT.as_latex.html  GT.as_latex.md  GT.as_raw_html.html  GT.as_raw_html.md  GT.cols_align.html  GT.cols_align.md  GT.cols_hide.html  GT.cols_hide.md  GT.cols_label.html  GT.cols_label.md  GT.cols_label_rotate.html  GT.cols_label_rotate.md  GT.cols_label_with.html  GT.cols_label_with.md  GT.cols_merge.html  GT.cols_merge.md  GT.cols_merge_n_pct.html  GT.cols_merge_n_pct.md  GT.cols_merge_range.html  GT.cols_merge_range.md  GT.cols_merge_uncert.html  GT.cols_merge_uncert.md  GT.cols_move.html  GT.cols_move.md  GT.cols_move_to_end.html  GT.cols_move_to_end.md  GT.cols_move_to_start.html  GT.cols_move_to_start.md  GT.cols_reorder.html  GT.cols_reorder.md  GT.cols_unhide.html  GT.cols_unhide.md  GT.cols_width.html  GT.cols_width.md  GT.data_color.html  GT.data_color.md  GT.fmt.html  GT.fmt.md  GT.fmt_bytes.html  GT.fmt_bytes.md  (+252 more)
scripts/: generate_durations_csv.py
tests/: __init__.py  conftest.py  test__boxhead.py  test__formats_vals.py  test__render_checks.py  test__stubhead.py  test__utils_nanoplots.py  test__utils_selenium.py  test_body.py  test_boxhead.py  test_cols_merge.py  test_data_color_utils.py  test_datasets.py  test_dependencies.py  test_export.py  test_fmt_duration.py  test_fmt_partsper.py  test_fmt_url.py  test_footnotes.py  test_formats.py  test_formats_nanoplots.py  test_formats_vals.py  test_gt.py  test_gt_data.py  test_gtsave.py  test_gtsave_validation.py  test_heading.py  test_helpers.py  test_locations.py  test_modify_rows.py  test_nanoplots_snap.py  test_options.py  test_pipe.py  test_repr.py  test_row_groups.py  test_scss.py  test_shiny.py  test_snaps.py  test_spanners.py  test_styles.py  (+14 more)
user-guide/: colorizing-with-data.html  colorizing-with-data.md  column-labels.html  column-labels.md  column-selection.html  column-selection.md  exporting-and-saving.html  exporting-and-saving.md  extensions.html  extensions.md  footnotes.html  footnotes.md  formatting-values.html  formatting-values.md  header-and-footer.html  header-and-footer.md  introduction.html  introduction.md  location-selection.html  location-selection.md  merging-columns.html  merging-columns.md  more-formatting.html  more-formatting.md  nanoplots.html  nanoplots.md  overview.html  overview.md  premade-themes.html  premade-themes.md  row-selection.html  row-selection.md  stub.html  stub.md  styling-the-table-body.html  styling-the-table-body.md  styling-the-whole-table.html  styling-the-whole-table.md  substituting-values.html  substituting-values.md  (+6 more)
user_guide/: 00-introduction.qmd  01-header-and-footer.qmd  02-header-and-footer.qmd  02-stub.qmd  03-column-labels.qmd  04-column-labels.qmd  04-merging-columns.qmd  05-footnotes.qmd  05-formatting-values.qmd  06-summary-rows.qmd  07-formatting-values.qmd  07-styling-the-table-body.qmd  08-more-formatting.qmd  08-styling-the-whole-table.qmd  09-colorizing-with-data.qmd  09-substituting-values.qmd  10-table-theme-options.qmd  10-text-transforms.qmd  11-premade-themes.qmd  11-styling-the-table-body.qmd  12-column-selection.qmd  12-styling-the-whole-table.qmd  13-colorizing-with-data.qmd  14-location-selection.qmd  14-table-theme-options.qmd  15-extensions.qmd  15-premade-themes.qmd  16-nanoplots.qmd  17-column-selection.qmd  18-row-selection.qmd  19-location-selection.qmd  20-exporting-and-saving.qmd  21-extensions.qmd
(+186 files in other folders)
