[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["great_tables"]

[project]
name = "great-tables"
description = "Easily generate information-rich, publication-quality tables from Python."
readme = "README.md"
keywords = ["tables"]
license.file = "LICENSE"
authors = [
    { name = "Richard Iannone", email = "rich@posit.co" },
    { name = "Michael Chow", email = "michael.chow@posit.co" }
]
dynamic = ["version"]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
    "commonmark>=0.9.1",
    "htmltools>=0.4.1",
    "importlib-metadata",
    "typing_extensions>=3.10.0.0",
    "packaging>=20.9",
    "pandas>=1.4.2",
    "numpy>=1.22.4",
    "Babel>=2.13.1",
    "mizani>=0.9.3",
    "webcolors",
]
requires-python = ">=3.7"

[project.urls]
homepage = "https://github.com/posit-dev/great_tables"

[project.optional-dependencies]
dev = [
    "jupyter",
    "quartodoc>=0.7.1; python_version >= '3.9'",
    "griffe==0.38.1",
    "polars",
    "pyarrow",
    "pytest>=3",
    "pytest-cov",
    "siuba",
    "shiny",
    "syrupy"
]

[tool.flake8]
exclude = ["docs", ".venv", "tests/*"]

ignore = [
    "E402",    # module level import not at top of file
    "E501",    # line too long (maximum 100 characters)
    "W503",    # line break before binary operator
    "F811",    # redefinition of unused name
    "E203",    # whitespace before ':'
    "F401",    # 'module' imported but unused
    "F841",    # local variable 'name' is assigned to but never used
]

max-line-length = 100

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=great_tables"
asyncio_mode = "strict"
testpaths = [
    "tests"
]

[tool.black]
line-length = 100
