[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["great_tables"]

[project]
name = "great-tables"
description = "Easily generate information-rich, publication-quality tables from Python."
readme = "README.md"
keywords = ["tables"]
license.file = "LICENSE"
authors = [
    { name = "Richard Iannone", email = "rich@posit.co" },
    { name = "Michael Chow", email = "michael.chow@posit.co" }
]
dynamic = ["version"]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
    "commonmark>=0.9.1",
    "htmltools>=0.4.1",
    "importlib-metadata",
    "typing_extensions>=3.10.0.0",
    "numpy>=1.22.4",
    "Babel>=2.13.1",
    "importlib-resources"
]
requires-python = ">=3.9"

[project.optional-dependencies]
all = [
    "great_tables[extra]",
    "great_tables[dev]",
]

extra = [
    "selenium>=4.18.1",
    "Pillow>=10.2.0",
]

dev = [
    "great_tables[dev-no-pandas]",
    "pandas"
]

dev-no-pandas = [
    "black",
    "jupyter",
    "quartodoc>=0.7.1; python_version >= '3.9'",
    "griffe==0.38.1",
    "polars",
    "pre-commit==2.15.0",
    "pyarrow",
    "pyright>=1.1.244",
    "pytest>=3",
    "pytest-cov",
    "shiny",
    "syrupy"
]

[project.urls]
homepage = "https://github.com/posit-dev/great-tables"
documentation = "https://posit-dev.github.io/great-tables/"

[tool.flake8]
exclude = ["docs", ".venv", "tests/*"]

ignore = [
    "E402",    # module level import not at top of file
    "E501",    # line too long (maximum 100 characters)
    "W503",    # line break before binary operator
    "F811",    # redefinition of unused name
    "E203",    # whitespace before ':'
    "F401",    # 'module' imported but unused
    "F841",    # local variable 'name' is assigned to but never used
    "E702",    # multiple statements on one line (semicolon)
    "E704",    # multiple statements on one line (def)
]

max-line-length = 100

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=great_tables -m 'not no_pandas'"
asyncio_mode = "strict"
testpaths = [
    "tests"
]

markers = [
    "extra: marks tests that require extra dependencies to run",
    "no_pandas: test meant to run without pandas installed",
]

[tool.black]
line-length = 100
