[metadata]
name = gt
version = attr: gt.__version__
author = Richard Iannone
author_email = rich@posit.co
url = https://github.com/rstudio/gt-python
description = Easily generate information-rich, publication-quality tables from Python.
long_description = file: README.md
keywords = tables
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup :: HTML
    Topic :: Text Processing :: Markup :: LaTeX
    Topic :: Text Processing :: Markup :: Markdown

[options]
python_requires = >=3.7
packages = find:
test_suite = tests
include_package_data = True
setup_requires =
    setuptools
install_requires =
    commonmark>=0.9.1
    typing_extensions>=3.10.0.0
    packaging>=20.9
    pandas>=1.4.2
    numpy>=1.22.4
    libsass>=0.22.0
zip_safe = False

[options.extras_require]
dev =
    jupyter
    quartodoc
    polars
    pytest>=3
    syrupy

[flake8]
exclude = docs, .venv
